--- a/web/launcher/config-launcher/config.json
+++ b/web/launcher/config-launcher/config.json
@@ -1,12 +1,12 @@
 {
-  "maintenance": "off",
-  "maintenance_message": "Le server est en maintenance.<br>Merci de bien vouloir essayer ultérieurement.",
+  "maintenance": "on",
+  "maintenance_message": "Le server est en maintenance.<br>Merci de bien vouloir essayer plus tard.",
   "offline": "off",
   "client_id": "",
-  "game_version": "1.0",
-  "custom": false,
-  "verify": false,
+  "game_version": "1.12.2",
+  "custom": true,
+  "verify": true,
   "java": true,
-  "dataDirectory": ".minecraft",
-  "ignored": []
+  "dataDirectory": ".octariarp",
+  "ignored": ["options.txt", "log"]
 }
